--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,10 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	//implementation 'org.springframework.boot:spring-boot-starter-jdbc'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation "org.apache.tomcat.embed:tomcat-embed-jasper"
 	runtimeOnly 'com.h2database:h2'
+	implementation 'javax.servlet:jstl'
+
 
 
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
