--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,5 +6,14 @@ spring.datasource.username=sa
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
-
+spring.thymeleaf.enabled=true
 spring.jpa.hibernate.ddl-auto=none
+
+spring.mvc.view.prefix=/src/main/webapp/WEB-INF/views/
+spring.mvc.view.suffix=.jsp
+
+
+
+
+
+server.servlet.jsp.init-parameters.development=true
