--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.thymeleaf.enabled=true
 spring.jpa.hibernate.ddl-auto=none
-
+spring.devtools.restart.enabled = true
 spring.mvc.view.prefix=/src/main/webapp/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
 
